Prevents background from bleeding through on top and left edges is Stripes style is used

--- a/textbook/style.css
+++ b/textbook/style.css
@@ -710,6 +710,10 @@ table td {
   color: #FFF;
 }
 
+.wp-block-table.is-style-stripes table {
+  background-clip: padding-box;
+}
+
 /*--------------------------------------------------------------
 # Navigation
 --------------------------------------------------------------*/
